--- a/css/app.css
+++ b/css/app.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  padding: 0;
+  padding: 0 0 20px;
   background-color: rgb(240, 240, 240);
   font-family: Helvetica, sans-serif;
   font-size: 16px;
@@ -27,4 +27,18 @@ input[type="text"] {
 
 input[type="text"]:focus {
   outline: none;
+}
+
+.editor-container {
+  position: relative;
+  height: 200px;
+  margin: 0 0 10px;
+}
+
+.editor-container > div {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
