--- a/css/app.css
+++ b/css/app.css
@@ -1,24 +1,33 @@
 * {
   box-sizing: border-box;
+  outline: none;
 }
 
 body {
-  padding: 0 0 20px;
+  padding: 20px 10px;
   background-color: rgb(240, 240, 240);
-  font-family: Helvetica, sans-serif;
-  font-size: 16px;
+  font-family: 'Helvetica Neue', Helvetica, sans-serif;
+  font-size: 14px;
   color: rgb(50, 50, 50);
+}
+
+a, a:visited {
+  display: block;
+  margin: 0 0 10px;
+  color: rgb(72, 151, 217);
 }
 
 label {
   display: block;
   margin: 0 0 5px;
+  font-weight: 700;
 }
 
 input[type="text"] {
   display: block;
   width: 100%;
   padding: 10px;
+  margin: 0 0 10px;
   font-size: 14px;
   border: 1px solid rgb(220, 220, 220);
   border-radius: 3px;
@@ -29,10 +38,115 @@ input[type="text"]:focus {
   outline: none;
 }
 
+input[type="checkbox"] {
+  position: relative;
+  display: block;
+  width: 60px;
+  height: 22px;
+  padding: 10px;
+  margin: 0 0 25px;
+  cursor: pointer;
+  /* Hide native element: */
+  transform: translateX(10px);
+}
+
+input[type="checkbox"]:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  max-height: 100%;
+  padding: 10px 0 0;
+  background-color: rgb(213, 78, 78);
+  border: 4px solid rgb(255, 255, 255);
+  border-radius: 24px;
+  box-shadow: 0 0 6px rgb(230, 230, 230);
+  font-size: 16px;
+  font-weight: 700;
+  color: rgb(255, 255, 255);
+  text-align: center;
+  transition: background-color .3s;
+  transform: translateX(-10px);
+}
+
+input[type="checkbox"]:after {
+  content: '';
+  position: absolute;
+  top: 4px;
+  left: 4px;
+  width: 30px;
+  height: 30px;
+  background-image: linear-gradient(
+    to top left,
+    rgb(255, 255, 255),
+    rgb(210, 210, 210)
+  );
+  border: 1px solid rgb(210, 210, 210);
+  border-radius: 50%;
+  box-shadow: inset 0 0 3px rgb(255, 255, 255);
+  transition: left .3s;
+  transform: translateX(-10px);
+}
+
+input[type="checkbox"]:checked:before {
+  background-color: rgb(97, 194, 68);
+}
+
+input[type="checkbox"]:checked:after {
+  left: 32px;
+}
+
+button[data-delete] {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  width: 30px;
+  height: 30px;
+  background-color: rgb(213, 78, 78);
+  border: none;
+  border-radius: 50%;
+  color: rgb(255, 255, 255);
+  cursor: pointer;
+}
+
+button[data-delete]:after {
+  content: '✕';
+  font-size: 16px;
+}
+
+#add-event-handler {
+  width: 100%;
+  padding: 15px;
+  margin: 0 0 20px;
+  background-image: linear-gradient(
+    to top,
+    rgb(255, 255, 255),
+    rgb(240, 240, 240)
+  );
+  border: 1px solid rgb(220, 220, 220);
+  border-radius: 4px;
+  box-shadow: 0 0 6px rgb(230, 230, 230);
+  font-size: 16px;
+  font-weight: 700;
+  text-align: center;
+  cursor: pointer;
+}
+
+.handler {
+  position: relative;
+  padding: 15px;
+  margin: 0 0 20px;
+  background-color: rgb(250, 250, 250);
+  border: 1px solid rgb(220, 220, 220);
+  border-radius: 4px;
+  box-shadow: 0 0 6px rgb(230, 230, 230);
+}
+
 .editor-container {
   position: relative;
   height: 200px;
-  margin: 0 0 10px;
 }
 
 .editor-container > div {
